Update contact section

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <h2 style="font-size: 25px;font-weight:700px;">Contact</h2>
       
       <p>
-        <a href="mailto:ekaranjustus3@gmail.com" class="text-white text-decoration-none">natelengj@gmail.com</a>Email: natelengj@gmail.com | Phone: +254759479720</p>
+        <a href="mailto:natelengj@gmail.com" class="text-white text-decoration-none"></a>Email: natelengj@gmail.com | Phone: +254759479720</p>
     </div>
   </section>
 
