--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
+
   <!-- Fonts -->
-  <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
   <!-- Icon -->
-  <link rel="stylesheet" type="text/css" href="assets/fonts/simple-line-icons.css" />
+  
   <!--Styles.css-->
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -296,7 +297,7 @@
         <div class="card h-100 shadow-sm project-card">
           <div class="card-body">
             <h5 class="card-title">Online Hotel Room Reservation System</h5>
-            <p class="card-text">Developed an end-to-end web application using NodeJS, HTML, CSS, and PostgreSQL to allow guests to check room availability, make reservations online, pay via M-Pesa, and receive email notifications.</p>
+            <p class="card-text">Developed an end-to-end web application using NodeJS, HTML, CSS,JavaScript and PostgreSQL to allow guests to check room availability, make reservations online.Intergrated it with M-Pesa(Daraja Api) to send STK prompt for initiating and processing payment.</p>
           </div>
           <div class="overlay">
             <div class="icons">
@@ -314,7 +315,7 @@
         <div class="card h-100 shadow-sm project-card">
           <div class="card-body">
             <h5 class="card-title">Expense tracking web app</h5>
-            <p class="card-text">Created a web application using Django,JavaScript,Bootstrap and HTML and MYSQL databasefor backend that allow staff to log trip,add associated expenses and supporting documents(recipts) and admin panel for the admin to monitor expenses</p>
+            <p class="card-text">Created a web application using Django,JavaScript,HTML, CSS and MYSQL database for backend that allow staff to create trip,add expenses and upload supporting documents(recipts) and admin panel for the admin to manage users, view all trips and expenses</p>
           </div>
           <div class="overlay">
             <div class="icons">
@@ -333,7 +334,7 @@
         <div class="card h-100 shadow-sm project-card">
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
-            <p class="card-text">Design and developed this web page you're viewing using HTML,CSS and JavaScript showcasing my Education,Skills and some of my work</p>
+            <p class="card-text">Designed and developed this website you're viewing using HTML, CSS, and JavaScript to showcase my education, skills, and some of my work</p>
           </div>
           <div class="overlay">
             <div class="icons">
