modified js code

--- a/index.html
+++ b/index.html
@@ -15,27 +15,31 @@
   
   <!--Styles.css-->
   <link rel="stylesheet" href="styles.css">
+  <!--js-->
+  <script src="navbar.js"></script>
 </head>
 <body class="bg-white">
  
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-        <div class="container">
-            <!--<a class="navbar-brand fw-bold" href="#">Justus Nateleng</a>-->
+ <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+    <div class="container">
+        <!--<a class="navbar-brand fw-bold" href="#">Justus Nateleng</a>-->
+        <div class="ms-auto">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#education">Education & Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
         </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education & Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <!-- Home Section -->
