--- a/index.html
+++ b/index.html
@@ -170,52 +170,110 @@
     <div class="row g-4">
 
       <!-- Education Card 1 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 rounded-4">
-          <div class="card-body">
-            <img src="images/KCAU-logo.svg" alt="KCAU" 
-                 class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
-            <h5 class="card-title fw-bold mb-3">BSc in Software Development</h5>
-            <p class="card-text">Learned Networking, Databases, Web Development, Data Science, AI, and Machine Learning.</p>
-          </div>
-        </div>
-      </div>
+      <!-- Education Card 1 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/KCAU-logo.svg" alt="KCAU" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">BSc in Software Development</h5>
+      <p class="card-text">
+        Gained a solid foundation in computer programming, web development, and application development.
+      </p>
+      <a href="images/image.png" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
 
-      <!-- Education Card 2 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 rounded-4">
-          <div class="card-body">
-            <img src="images/data_analyst_essential.png" alt="Data Analytics" 
-                 class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
-            <h5 class="card-title fw-bold mb-3">Data Analytics Essential</h5>
-            <p class="card-text">Gained broad understanding of the analytics process, data formats, acquisition methods, transformation, and analysis using Excel, SQL, Tableau, and other tools.</p>
-          </div>
-        </div>
-      </div>
+<!-- Education Card 2 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/data_analyst_essential.png" alt="Data Analytics" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">Data Analytics Essential</h5>
+      <p class="card-text">
+        Gained broad understanding of the analytics process, data formats, acquisition methods, transformation, and analysis using Excel, SQL, Tableau, and other tools.
+      </p>
+      <a href="https://www.credly.com/badges/9dc3c002-1f53-4f92-9cc0-f57476c0cb28/public_url" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
 
-      <!-- Education Card 3 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 rounded-4">
-          <div class="card-body">
-            <img src="images/aws_ml_foundations.png" alt="AWS ML" 
-                 class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
-            <h5 class="card-title fw-bold mb-3">AWS Machine Learning Foundations</h5>
-            <p class="card-text">Learned fundamental ML concepts and how to apply the ML pipeline to solve business problems.</p>
-          </div>
-        </div>
-      </div>
+<!-- Education Card 3 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/aws_ml_foundations.png" alt="AWS ML" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">AWS Machine Learning Foundations</h5>
+      <p class="card-text">
+        Learned fundamental ML concepts and how to apply the ML pipeline to solve business problems.
+      </p>
+      <a href="https://www.credly.com/badges/3289f66e-861a-4b4e-bed7-c1bc8f9fb840/public_url" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
 
-      <!-- Education Card 4 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 rounded-4">
-          <div class="card-body">
-            <img src="images/aws_cloud_computing101.png" alt="AWS Cloud" 
-                 class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
-            <h5 class="card-title fw-bold mb-3">AWS Cloud Computing 101</h5>
-            <p class="card-text">Fundamental understanding of AWS cloud core services.</p>
-          </div>
-        </div>
-      </div>
+<!-- Education Card 4 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/aws_cloud_computing101.png" alt="AWS Cloud" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">AWS Cloud Computing 101</h5>
+      <p class="card-text">
+        Gained fundamental understanding of AWS cloud core services.
+      </p>
+      <a href="https://www.credly.com/badges/b08431ca-74c2-4d98-807f-fa22b18b412e/public_url" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- Education Card 5 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/89-professional-foundations-certificate-justus-nateleng.png" alt="Professional Foundations" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">Professional Foundations</h5>
+      <p class="card-text">
+        Learned project management, time management, and soft skills required in professional setup such as critical thinking, problem solving, and teamwork.
+      </p>
+      <a href="images/89-professional-foundations-certificate-justus-nateleng.png" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
+
+<!-- Education Card 6 -->
+<div class="col-md-4">
+  <div class="card shadow-sm h-100 rounded-4">
+    <div class="card-body d-flex flex-column">
+      <img src="images/image.png" alt="Oracle Certified" 
+           class="mb-3" style="width: 120px; height: 120px; object-fit: contain;">
+      <h5 class="card-title fw-bold mb-3">
+        Oracle Data Platform Certified Foundations Associate
+      </h5>
+      <p class="card-text">
+        Gained foundational knowledge of Oracle's data management strategy, including Autonomous Database, data lakehouse concepts, and services like MySQL and NoSQL.
+      </p>
+      <a href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=25176C51928072AE644717D9B1B0F332F3C208DA781FAA0B2E2C54BF9C3BD6DE" target="_blank" class="btn btn-primary mt-auto">
+        View Certificate
+      </a>
+    </div>
+  </div>
+</div>
+
 
       <!-- Skills Section -->
    <div class="col-md-8">
@@ -244,7 +302,7 @@
 
         <div class="col-6 col-md-4">
           <div class="card bg-custom-grey border-0 rounded-4 h-100">
-            <div class="card-body text-center p-3">Python/Django</div>
+            <div class="card-body text-center p-3">Python(Django/Flask)</div>
           </div>
         </div>
 
@@ -256,7 +314,7 @@
 
         <div class="col-6 col-md-4">
           <div class="card bg-custom-grey border-0 rounded-4 h-100">
-            <div class="card-body text-center p-3">Power BI</div>
+            <div class="card-body text-center p-3">Excel and Power BI</div>
           </div>
         </div>
 
@@ -275,6 +333,16 @@
         <div class="col-6 col-md-4">
           <div class="card bg-custom-grey border-0 rounded-4 h-100">
             <div class="card-body text-center p-3">Git & Version Control</div>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
+          <div class="card bg-custom-grey border-0 rounded-4 h-100">
+            <div class="card-body text-center p-3">Java</div>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
+          <div class="card bg-custom-grey border-0 rounded-4 h-100">
+            <div class="card-body text-center p-3">Oracle database</div>
           </div>
         </div>
 
@@ -338,7 +406,7 @@
         <div class="card h-100 shadow-sm project-card">
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
-            <p class="card-text">Designed and developed this website you're viewing using HTML, CSS, and JavaScript to showcase my education, skills, and some of my work</p>
+            <p class="card-text">Designed and developed this website you're viewing using HTML, CSS,Bootstrap and JavaScript to showcase my education, skills, and some of my work</p>
           </div>
           <div class="overlay">
             <div class="icons">
@@ -359,10 +427,23 @@
           </div>
           <div class="overlay">
             <div class="icons">
-              <a class="btn btn-common" href="https://mariberg.notion.site/Eternal-Star-Website-2025ee1d28df4965b8e4c7314b6cf320?pvs=4" role="button">
-               Github repository
-              </a>
+              
               <a href="https://www.ecopeacenet.co.ke/" class="btn btn-common">Live Website</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm project-card">
+          <div class="card-body">
+            <h5 class="card-title">Rukonyang website</h5>
+            <p class="card-text">Designed and developed website for Rukonyang and Associates Limited,Dealers in Water, Roads and Building Works and General Supplies</p>
+          </div>
+          <div class="overlay">
+            <div class="icons">
+             
+              <a href="https://rukonyang.netlify.app/" class="btn btn-common">Live Website</a>
             </div>
           </div>
         </div>
