addedd dark mode/light mode theme toggle

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item"><a class="nav-link" href="#education">Education & Skills</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+               <li class="nav-item">
+                <button id="theme-toggle" class="theme-toggle-btn">🌙</button>
+                </li>
             </ul>
         </div>
     </div>
@@ -164,7 +167,7 @@
 <!--What im doing sections ends here-->
 
  <!-- Education -->
-<section id="education" class="py-5 bg-white">
+<section id="education" class="py-5 bg">
   <div class="container">
     <h2 class="mb-5 text-center fw-bold">Education & Skills</h2>
     <div class="row g-4">
@@ -359,7 +362,7 @@
 
 
 <!--Projects sections begins here-->
-  <section id="projects" class="py-5" style="background-color: #f2f2f2; margin-bottom: 50px;">
+  <section id="projects" class="py-5">
   <div class="container">
     <h2 class="mb-4 text-center">Projects</h2>
     <div class="row g-4">
