commented 2 educations cards

--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
     <h2 class="mb-5 text-center fw-bold">Education & Skills</h2>
     <div class="row g-4">
 
-      <!-- Education Card 1 -->
-      <!-- Education Card 1 -->
+<!-- Education Card 1 -->
 <div class="col-md-4">
   <div class="card shadow-sm h-100 rounded-4">
     <div class="card-body d-flex flex-column">
@@ -225,7 +224,7 @@
 </div>
 
 <!-- Education Card 4 -->
-<div class="col-md-4">
+<!--<div class="col-md-4">
   <div class="card shadow-sm h-100 rounded-4">
     <div class="card-body d-flex flex-column">
       <img src="images/aws_cloud_computing101.png" alt="AWS Cloud" 
@@ -239,10 +238,10 @@
       </a>
     </div>
   </div>
-</div>
+</div>-->
 
 <!-- Education Card 5 -->
-<div class="col-md-4">
+<!--<div class="col-md-4">
   <div class="card shadow-sm h-100 rounded-4">
     <div class="card-body d-flex flex-column">
       <img src="images/89-professional-foundations-certificate-justus-nateleng.png" alt="Professional Foundations" 
@@ -256,7 +255,7 @@
       </a>
     </div>
   </div>
-</div>
+</div>-->
 
 <!-- Education Card 6 -->
 <div class="col-md-4">
